[package]
name="okv"
version="0.0.6"
edition="2021"
description="A versatile key-value storage library"
keywords=["key-value", "database", "rocksdb", "sqlite", "serde"]
categories=["database", "concurrency", "api-bindings"]
license="MIT OR Apache-2.0"
authors=["Henry Gressmann <mail@henrygressmann.de>"]
repository="https://github.com/explodingcamera/okv"

[package.metadata.docs.rs]
all-features=true
default-target="x86_64-unknown-linux-gnu"

[dependencies]
byteorder="1.5"
thiserror="1.0.50"
inherent="1.0"

rocksdb={version="0.21.0", optional=true, default-features=false, features=["multi-threaded-cf"]}
# rusqlite={version="0.30", optional=true}
dashmap={version="5.5", optional=true}

serde={version="1.0", optional=true, features=["derive"]}
serde_json={version="1.0", optional=true}
rmp-serde={version="1.1", optional=true}

[features]
default=["rocksdb", "memdb", "serde", "serde-json", "serde-rmp"]
rocksdb=["dep:rocksdb"]
# sqlite=["dep:rusqlite"]
memdb=["dep:dashmap"]

serde=["dep:serde"]
serde-json=["serde", "dep:serde_json"]
serde-rmp=["serde", "dep:rmp-serde"]

unstable_any=[]
unstable_lasydb=[]
