[workspace.package]
edition="2021"
description="A versatile key-value storage library"
license="MIT OR Apache-2.0"
authors=["Henry Gressmann <mail@henrygressmann.de>"]
repository="https://github.com/explodingcamera/okv"

[workspace]
members=["crates/okv_core", "crates/okv_sqlite", "crates/okv_rocksdb", "crates/okv_memory"]
resolver="2"

[package]
name="okv"
version="0.3.1"
edition.workspace=true
description="A versatile key-value storage library"
license.workspace=true
authors.workspace=true
repository.workspace=true

[dependencies]
okv_core={version="0.3.0", path="crates/okv_core"}
# okv_sqlite={version="0.3.0", path="crates/okv_sqlite", optional=true}
okv_rocksdb={version="0.3.0", path="crates/okv_rocksdb", optional=true}
okv_memory={version="0.3.0", path="crates/okv_memory", optional=true}

[dev-dependencies]
eyre="0.6"
serde="1"

[package.metadata.docs.rs]
all-features=true
default-target="x86_64-unknown-linux-gnu"

[features]
default=["memory"]

# serialization
serde=["okv_core/serde"]
serde_json=["okv_core/serde_json"]
rmp-serde=["okv_core/rmp-serde"]
uuid=["okv_core/uuid"]

# TODO: optional multi-threading support
# multi_threaded=[
#     "okv_core/multi_threaded",
#     "okv_sqlite?/multi_threaded",
#     "okv_rocksdb?/multi_threaded",
#     "okv_memory?/multi_threaded",
# ]

# storage engines
# sqlite=["okv_sqlite"]
rocksdb=["okv_rocksdb"]
memory=["okv_memory"]


[[example]]
name="simple"
required-features=["rocksdb"]
test=true

[[example]]
name="transactions"
required-features=["rocksdb"]
test=true

[[example]]
name="serde_json"
required-features=["serde_json"]
test=true
