[package]
name="okv_core"
version.workspace=true
edition.workspace=true
description="A versatile key-value storage library"
keywords=["key-value", "database", "rocksdb", "sqlite", "serde"]
categories=["database", "concurrency", "api-bindings"]
license.workspace=true
authors.workspace=true
repository.workspace=true
rust-version.workspace=true

[dependencies]
thiserror="1.0"
byteorder="1.5"
inherent="1.0"
futures={version="0.3", optional=true}

serde={version="1.0", optional=true, features=["derive"]}
serde_json={version="1.0", optional=true}
rmp-serde={version="1.3", optional=true}
uuid={version="1.9", optional=true}

[dev-dependencies]
okv={path="../../", features=["memory"]}

[features]
default=["multi_threaded"]

async=["futures"]
multi_threaded=[]
serde=["dep:serde"]
serde_json=["serde", "dep:serde_json"]
rmp-serde=["serde", "dep:rmp-serde"]
uuid=["dep:uuid"]
