[package]
name="okv_cloudflare"
version="0.4.0+worker.0.3"
edition.workspace=true
description="A versatile key-value storage library"
keywords=["key-value", "database", "serde", "workers"]
categories=["database", "concurrency", "api-bindings"]
license.workspace=true
authors.workspace=true
repository.workspace=true
publish=false
rust-version.workspace=true

[dependencies]
okv_core={version="0.4", path="../core", features=["async"]}
worker={version="0.3", optional=true}
futures="0.3"

[features]
default=["d1", "worker"]

# http=[]
worker=["dep:worker"]
d1=["worker/d1"]
