[package]
name="okv_libsql"
version="0.4.0+libsql.0.4"
edition.workspace=true
description="A versatile key-value storage library"
keywords=["key-value", "database", "rocksdb", "sqlite", "serde"]
categories=["database", "concurrency", "api-bindings"]
license.workspace=true
authors.workspace=true
repository.workspace=true
publish=false
rust-version.workspace=true

[dependencies]
okv_core={version="0.4", path="../core"}
libsql={version="0.4", default-features=false}

[features]
default=["remote", "local"]

remote=["libsql/remote"]
local=["libsql/core"]
