[package]
name="okv_redb"
version="0.4.0+redb.2.1"
edition.workspace=true
description="A versatile key-value storage library"
keywords=["key-value", "database", "serde", "redb"]
categories=["database", "concurrency", "api-bindings"]
license.workspace=true
authors.workspace=true
repository.workspace=true
publish=false
rust-version.workspace=true

[dependencies]
okv_core={version="0.4", path="../core"}
redb="2.1.1"
self_cell="1.0"
ouroboros="0.18"

[features]
multi_threaded=[]
