[package]
name="okv_rocksdb"
version="0.4.22+rocksdb.0.22"
edition.workspace=true
description="A versatile key-value storage library"
keywords=["key-value", "database", "rocksdb", "sqlite", "serde"]
categories=["database", "concurrency", "api-bindings"]
license.workspace=true
authors.workspace=true
repository.workspace=true

[dependencies]
okv_core={version="0.4", path="../core"}
rocksdb={version="0.22", default-features=false, features=["multi-threaded-cf"]}
inherent="1.0"
self_cell="1.0"

[features]
multi_threaded=["rocksdb/multi-threaded-cf"]
