[package]
name="okv_sqlite"
version="0.3.0"
edition.workspace=true
description="A versatile key-value storage library"
keywords=["key-value", "database", "rocksdb", "sqlite", "serde"]
categories=["database", "concurrency", "api-bindings"]
license.workspace=true
authors.workspace=true
repository.workspace=true

[dependencies]
okv_core={version="0.3", path="../okv_core"}

[features]
multi_threaded=[]
